force-app/main/default/objects/Partner_Performance__c/Partner_Performance__c.object-meta.xml
<CustomObject>
    <label>Partner Performance</label>
    <nameField>
        <label>Partner Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Performance Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>