force-app/main/default/objects/Partner_Performance__c/fields/Content_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Content_Downloads__c</fullName>
    <label>Content Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>