force-app/main/default/objects/Partner_Performance__c/fields/Leaderboard_Rank__c.field-meta.xml
<CustomField>
    <fullName>Leaderboard_Rank__c</fullName>
    <label>Leaderboard Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>