force-app/main/default/objects/Partner_Performance__c/fields/Leads_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Leads_Accepted__c</fullName>
    <description
  >Number of assigned leads accepted by the partner during the period.</description>
    <label>Leads Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>