force-app/main/default/objects/Partner_Performance__c/fields/Leads_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Leads_Assigned__c</fullName>
    <description
  >Number of leads assigned to the partner during the period.</description>
    <label>Leads Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>