force-app/main/default/objects/Partner_Performance__c/fields/Leads_Converted__c.field-meta.xml
<CustomField>
    <fullName>Leads_Converted__c</fullName>
    <description
  >Number of partner leads converted during the period.</description>
    <label>Leads Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>