force-app/main/default/objects/Partner_Performance__c/fields/MDF_Approved__c.field-meta.xml
<CustomField>
    <fullName>MDF_Approved__c</fullName>
    <description
  >MDF amount approved for the partner during the period.</description>
    <label>MDF Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>