force-app/main/default/objects/Partner_Performance__c/fields/MDF_Claimed__c.field-meta.xml
<CustomField>
    <fullName>MDF_Claimed__c</fullName>
    <description
  >MDF amount claimed by the partner during the period.</description>
    <label>MDF Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>