force-app/main/default/objects/Partner_Performance__c/fields/Opportunities_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Created__c</fullName>
    <description
  >Number of opportunities created from partner activity during the period.</description>
    <label>Opportunities Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>