force-app/main/default/objects/Partner_Performance__c/fields/Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Won__c</fullName>
    <label>Opportunities Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>