force-app/main/default/objects/Partner_Performance__c/fields/Partner_Score__c.field-meta.xml
<CustomField>
    <fullName>Partner_Score__c</fullName>
    <label>Partner Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>