force-app/main/default/objects/Partner_Performance__c/fields/Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Value__c</fullName>
    <description
  >Pipeline value attributed to the partner during the period.</description>
    <label>Pipeline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>