force-app/main/default/objects/Partner_Performance__c/fields/Reporting_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End__c</fullName>
    <description>End date for the reporting period.</description>
    <label>Reporting Period End</label>
    <type>Date</type>
</CustomField>