force-app/main/default/objects/Partner_Performance__c/fields/Reporting_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Start__c</fullName>
    <description>Start date for the reporting period.</description>
    <label>Reporting Period Start</label>
    <type>Date</type>
</CustomField>