force-app/main/default/objects/Partner_Performance__c/fields/Won_Value__c.field-meta.xml
<CustomField>
    <fullName>Won_Value__c</fullName>
    <description
  >Closed-won value attributed to the partner during the period.</description>
    <label>Won Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>